--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                   <div class="form-group">
                     <label for="exampleInputEmail1">Email address</label>
                     <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
-                    <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+                    <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else. This is a change</small>
                   </div>
                   <div class="form-group">
                     <label for="exampleInputPassword1">Password</label>
@@ -57,6 +57,7 @@
                   </div>
                   <button type="submit" class="btn btn-primary">Submit</button>
               </form>
+              <p>Testing the changes</p>
             
         </div>
     </body>
